# maci

./: .gitignore  LICENSE  pyproject.toml
configs/: 4x4.yaml
src/maci/: __init__.py
src/maci/core/: app.py  config.py  neuron.py
src/maci/models/: actor.py  agent_actor.py  agent_critic.py  agent_router.py  critic.py
